--- a/discovery/Cargo.toml
+++ b/discovery/Cargo.toml
@@ -15,7 +15,7 @@ form_urlencoded = "1.0"
 futures-core = "0.3"
 hmac = "0.11"
 hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
-libmdns = "0.6"
+libmdns = { git = 'https://github.com/baloo/libmdns.git', branch = 'baloo/multiple-interfaces' }
 log = "0.4"
 rand = "0.8"
 serde_json = "1.0.25"
